<resources>
    <string name="app_name">USN Love</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Your name</string>
    <string name="title_sex">Choose your sex</string>
    <string name="title_register">Register</string>
    <string name="person_list_title">Let\'s see who else is here...</string>
    <string name="profile_placeholder">Babe</string>
    <string name="goToRegister">Not registered? Click here</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_set_sex_female">Female</string>
    <string name="action_set_sex_male">Male</string>
    <string name="action_set_sex_other">Other</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>